# src/routes/departments.routes.ts
@@ -2,8 +2,9 @@ import express, {Request, Response} from 'express';
 import {DepartmentsController} from "../controllers/departments.controller";
 import {User} from "../models/users.model";
 import {formattedResponse} from "../handlers/http/formattedResponse";
-import {LocalUnitsController} from "../controllers/localUnits.controller";
 import {objectParser} from "../handlers/objects/objectParser";
+import {check, validationResult} from "express-validator";
+import {validationMessage} from "../handlers/http/validationMessage";
 
 const departmentsRouter = express.Router({mergeParams: true});
 
@@ -15,7 +16,7 @@ departmentsRouter.get('/:id', async (req: Request, res: Response) => {
   try {
     const controller = new DepartmentsController();
     const user: User = req.body.user
-    const response = await controller.getById(user.id, id);
+    const response = await controller.getById(id);
     if (Object.keys(response).length === 0) {
       return res.status(404).json(
         formattedResponse({
@@ -37,21 +38,37 @@ departmentsRouter.get('/:id', async (req: Request, res: Response) => {
 });
 
 /* POST local-units/:id - create new department */
-departmentsRouter.post('/', async (req: Request, res: Response) => {
+departmentsRouter.post('/',
+  [
+    check("object.name")
+      .isLength({min: 3})
+      .withMessage("the name must have minimum length of 3")
+      .trim(),
+  ],
+  async (req: Request, res: Response) => {
 
-  try {
-    const controller = new DepartmentsController();
-    const response = await controller.create(objectParser(req.body));
-    res.status(200).json(response);
-  } catch (error) {
-    res.status(500).json(
-      formattedResponse({
-        status: 500,
-        Error: error,
-        object: "department",
-      }))
+    if (!validationResult(req).isEmpty()) {
+      return res.status(400).json(
+        formattedResponse({
+          status: 400,
+          object: "department",
+          message: validationMessage(req)
+        })
+      );
+    }
+
+    try {
+      const controller = new DepartmentsController();
+      const response = await controller.create(objectParser(req.body.object));
+      res.status(200).json(response);
+    } catch (error) {
+      res.status(500).json(
+        formattedResponse({
+          status: 500,
+          Error: error,
+          object: "department",
+        }))
   }
-
 });
 
 /* PUT local-units/:id - update department */
@@ -65,7 +82,7 @@ departmentsRouter.put('/:id', async (req: Request, res: Response) => {
   try {
     const user: User = req.body.user
     const controller = new DepartmentsController();
-    const response = await controller.update(id, objectParser(req.body));
+    const response = await controller.update(id, objectParser(req.body.object));
     res.status(200).json(response);
   } catch (error) {
     res.status(500).json(
@@ -104,8 +121,8 @@ departmentsRouter.get('/:id/hr', async (req: Request, res: Response) => {
   const {params: {id}} = req;
   try {
     const user: User = req.body.user
-    const controller = new LocalUnitsController();
-    const response = await controller.getAllDepartments(id);
+    const controller = new DepartmentsController();
+    const response = await controller.getAllHR(id);
     return res.json(response);
   } catch (error) {
     res.status(500).json(
@@ -119,13 +136,13 @@ departmentsRouter.get('/:id/hr', async (req: Request, res: Response) => {
 });
 
 /* GET local-units - get all localUnits */
-departmentsRouter.get('/:id/vehicles', async (req: Request, res: Response) => {
+departmentsRouter.get('/:id/equipments', async (req: Request, res: Response) => {
 
   const {params: {id}} = req;
   try {
     const user: User = req.body.user
-    const controller = new LocalUnitsController();
-    const response = await controller.getAllDepartments(id);
+    const controller = new DepartmentsController();
+    const response = await controller.getAllEquipments(id);
     return res.json(response);
   } catch (error) {
     res.status(500).json(
